--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,37 @@
-fake_useragent==1.2.1
+alembic==1.12.0
+aniso8601==9.0.1
+bcrypt==4.0.1
+blinker==1.6.2
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.7
+cryptography==41.0.3
+dnspython==2.4.2
+docopt==0.6.2
+fake-useragent==1.2.1
 Flask==2.3.3
-Flask_Migrate==4.0.4
-flask_sqlalchemy==3.1.1
+Flask-JWT-Extended==4.5.2
+Flask-Migrate==4.0.4
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Mako==1.2.4
+MarkupSafe==2.1.3
 paramiko==3.3.1
-Requests==2.31.0
+pipreqs==0.4.13
+pycparser==2.21
+PyJWT==2.8.0
+pymongo==4.5.0
+PyMySQL==1.1.0
+PyNaCl==1.5.0
+pytz==2023.3.post1
+requests==2.31.0
+six==1.16.0
+SQLAlchemy==2.0.20
+typing_extensions==4.7.1
+urllib3==2.0.4
+Werkzeug==2.3.7
+yarg==0.1.9
