--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-SQLAlchemy==3.1.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lxml==4.9.3
 Mako==1.2.4
 MarkupSafe==2.1.3
 paramiko==3.3.1
