--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Jinja2==3.1.2
 lxml==4.9.3
 Mako==1.2.4
 MarkupSafe==2.1.3
+packaging==23.1
 paramiko==3.3.1
 pipreqs==0.4.13
 pycparser==2.21
@@ -29,6 +30,8 @@ pymongo==4.5.0
 PyMySQL==1.1.0
 PyNaCl==1.5.0
 pytz==2023.3.post1
+PyYAML==6.0.1
+qbittorrent-api==2023.9.53
 requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.20
