--- a/config_file/autoAnime.yaml
+++ b/config_file/autoAnime.yaml
@@ -3,14 +3,14 @@ FLASK:
   ENV: 'developmet'
   HOST: '0.0.0.0'
   PORT: '5555'
-  # SQLALCHEMY_DATABASE_URI: 'mysql+pymysql://root:password@10.112.5.25:3306/auto_anime?charset=utf8'
-  SQLALCHEMY_DATABASE_URI: 'mysql+pymysql://root:password@mysql:3306/auto_anime?charset=utf8' 
+  SQLALCHEMY_DATABASE_URI: 'mysql+pymysql://root:password@10.112.5.25:3306/auto_anime?charset=utf8'
+  #SQLALCHEMY_DATABASE_URI: 'mysql+pymysql://root:password@mysql:3306/auto_anime?charset=utf8' 
 SPIDER:
   URL: 'https://mikanani.me' # 国际
   # URL: 'https://mikanime.tv' # 国内
 QB:
-  # host: '10.112.5.25'
-  host: 'qbittorrent'
+  host: '10.112.5.25'
+  #host: 'qbittorrent'
   port: '8081'
   username: 'admin'
   password: 'adminadmin'
