--- a/config_file/auto_anime.yaml
+++ b/config_file/auto_anime.yaml
@@ -8,6 +8,7 @@ FLASK:
 SPIDER:
   URL: 'https://mikanani.me' # 国际
   # URL: 'https://mikanime.tv' # 国内
+  THREAD_POOL_SIZE_LIMIT: 5
 QB:
   host: '10.112.5.25'
   #host: 'qbittorrent'
