--- a/config_file/auto_anime.yaml
+++ b/config_file/auto_anime.yaml
@@ -18,3 +18,9 @@ QB:
 DOWNLOAD:
   IMG: 'static/img/anime_list/'
   SEED: 'seed/'
+MySQL:
+  HOSTNAME: '10.112.5.25'
+  PORT: '3306'
+  DATABASE: 'auto_anime'
+  USERNAME: 'root'
+  PASSWORD: 'password'
